backend/src/main/java/com/example/demo/util/error/UserNotLoggedInException.java
package com.example.demo.util.error;

public class UserNotLoggedInException extends RuntimeException {
    public UserNotLoggedInException(String message) {
        super(message);
    }
}
